ch7/src/pass/snapshots/ch7__pass__explicate_control__tests__call_in_cond.snap
---
source: ch7/src/pass/explicate_control.rs
expression: result.to_string_pretty()
---
--------------------------- foo -------------------------
params: x.0: Tuple([Int, Bool, Void])
returns: Bool
locals: {(tmp).0: Bool, (tmp).1: Bool}

.start:
    (tmp).0 = (vector-ref x.0 [Int])
    if (eq? (tmp).0 #f) goto .block1 else goto .block0
.block0:
    (tmp).1 = (vector-ref x.0 [Int])
    return (not (tmp).1)
.block1:
    return (> 3 2)

----------------------------------------
locals: {(tmp).5: Bool, (tmp).2: Int, (tmp).3: Tuple([Int, Bool, Void]), (tmp).4: Bool}

.start:
    (tmp).2 = (read)
    (tmp).3 = (vector ((tmp).2 : Int) (#t : Bool) (#<void> : Void))
    (tmp).4 = ((fun-ref foo 1) (tmp).3)
    if (eq? (tmp).4 #f) goto .block4 else goto .block3
.block4:
    (tmp).5 = #f
    goto .block2
.block3:
    print-int 3
    newline
    (tmp).5 = #t
    goto .block2
.block2:
    print-bool (tmp).5
    newline
    return #<void>

